# jlt

./: Cargo.toml  Justfile  LICENSE  README.md  plan.txt  rustfmt.toml  todo.md  todo.txt
lib/: lib.sh  utils.sh
scripts/: mfpabl.sh
src/: bash.rs  cmd_handlers.rs  commands.rs  distro.rs  handler.rs  main.rs  main.sh  shell.rs  state.rs
